--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
   "name": "scandiwebcom/google-tag-manager",
   "description": "Google Tag Manager module, developed by Scandiweb",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "type": "magento2-module",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0"
+    "php": "~5.5.0|~5.6.0|~7.0.0",
+    "scandiweb/module-core": "~0.1.2"
   },
   "autoload": {
     "files": [
