--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "version": "1.0.26",
   "type": "magento2-module",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0",
+    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
     "scandiweb/module-core": "~0.1.2"
   },
   "autoload": {
